<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp">
            <ImageView
                android:id="@+id/im_back"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/back"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/im_head"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/default_head"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_remark_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rel_change_remark"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:layout_marginTop="1dp">
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/remarks"/>
        <TextView
            android:id="@+id/remarks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/tv1"
            android:layout_marginLeft="20dp"
            android:text=""/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:onClick="cleanChatData"
        android:layout_marginTop="1dp">
<!--        <TextView-->
<!--            android:id="@+id/tv2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="@string/share_file"/>-->

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="cleanChatData"
            android:textSize="20dp"
            android:text="@string/clean_chat_data"/>


<!--        <Switch-->
<!--            android:id="@+id/s_v"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:switchMinWidth="20dp"-->
<!--            android:thumb="@drawable/thumb"-->
<!--            android:track="@drawable/track"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_marginRight="10dp"/>-->
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_send_message"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/blue4"
        android:textSize="16sp"
        android:text="@string/send_message"/>

</LinearLayout>
