<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/me_whole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/meLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/gray4"
        android:paddingTop="20dp"
        android:paddingRight="3dp">
        <ImageView
            android:id="@+id/im_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/g1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="3dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/gray0"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/accountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="156s4d654a65"
                android:textColor="@color/gray2"
                android:textSize="13sp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_right"
            android:visibility="gone"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp">

    </TextView>
    <LinearLayout
        android:id="@+id/password_change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray4"
        android:paddingTop="20dp"
        android:paddingRight="3dp"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_account"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/passTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/Account_Password"
                android:textColor="@color/gray0"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_right" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp">

    </TextView>
    <LinearLayout
        android:id="@+id/Language_change"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray4"
        android:paddingTop="20dp"
        android:visibility="gone"
        android:paddingRight="3dp"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/lang"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/change_language"
                android:textColor="@color/gray0"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_right" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="15dp">

    </TextView>
    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray4"
        android:paddingTop="20dp"
        android:paddingRight="3dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_setting"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/set"
                android:textColor="@color/gray0"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_right" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="15dp">

    </TextView>
    <LinearLayout
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray4"
        android:paddingTop="20dp"
        android:paddingRight="3dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/quitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/quit"
                android:layout_gravity="center"
                android:textColor="@color/gray0"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
